--- a/index.ipynb
+++ b/index.ipynb
@@ -1196,7 +1196,7 @@
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
-    "    pass"
+    "    return sum(squared_errors(x_values, y_values, m, b))"
    ]
   },
   {
